--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -11,6 +11,8 @@
  */
 // @import "~some-node-module";
 
+@import "~aos/src/sass/aos";
+
 /** Import theme styles */
 @import "common/global";
 @import "components/buttons";
